edit room and roomitem fucntion